frontend/src/App.scss
.p-toast.p-toast-topright {
    z-index: 1000;
    top: 70px;
}

.p-toast-message-text {
	white-space: pre-wrap;
}

.p-menuitem-text {
    color: dimgray !important;
}

.p-menuitem-icon {
    color: dimgray !important;
}

.p-toolbar {
    padding: .5em;
}

